syntax="proto3";
option csharp_namespace="grpcAuth";

service GrpcA {
	rpc Reg (RegistracijaMsg) returns (RezultatMsg);
	rpc LogIn (RegistracijaMsg) returns (RezultatMsg);
	rpc Provera (NullMsg) returns (KorisnikInfoMsg);
}

message NullMsg {}

message RegistracijaMsg {
	string Ime = 1;
	string Pass = 2;
}

message RezultatMsg {
	bool Uspeh = 1;
	string Greska = 2;
}

message KorisnikInfoMsg {
	bool Auth = 1;
	string Ime = 2;
	string KlejmoviXML = 3;
}